<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="389dp"
                android:layout_height="219dp"
                android:layout_centerHorizontal="true"
                android:elevation="5dp"/>


            <EditText
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/video_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:hint="@string/weight_edit_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:longClickable="true"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weight_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:hint="@string/height_edit_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:longClickable="true"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/bmi_calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/height_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:focusable="true"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:text="@string/bmi_button_text"
                android:theme="@style/Button.White" />

            <EditText
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bmi_calculate_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:hint="@string/result_text"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bmi_calculate_button"
                android:layout_marginStart="34dp"
                android:layout_marginTop="39dp"
                android:layout_toEndOf="@+id/result_text"
                android:clickable="true"
                android:contentDescription="@string/info_text"
                android:focusable="true"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:text="@string/bmi_button_text"
                android:theme="@style/Button.White"
                app:srcCompat="@android:drawable/ic_dialog_info" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>